--- a/src/main/resources/templates/systemmanagement/medical_room.html
+++ b/src/main/resources/templates/systemmanagement/medical_room.html
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +7,7 @@
     <link rel="stylesheet" href="layui/css/layui.css">
     <script src="layui/layui.js"></script>
     <script src="js/jQuery/jquery-2.2.3.min.js"></script>
-    <!--<script>
+    &lt;!&ndash;<script>
         layui.use(['laypage', 'layer'], function() {
             var laypage = layui.laypage;
             layer = layui.layer;
@@ -17,7 +18,7 @@
                 , theme: '#1E9FFF'
             });
         })
-    </script>-->
+    </script>&ndash;&gt;
     <script src="js/systemmanagement/js/pagelist.js"></script>
     <style>
         body{
@@ -72,11 +73,11 @@
     </div>
     <div>
         <table class="layui-table">
-            <!--<colgroup>
+            &lt;!&ndash;<colgroup>
                 <col width="150">
                 <col width="200">
                 <col>
-            </colgroup>-->
+            </colgroup>&ndash;&gt;
             <thead>
             <tr>
                 <th type="checkbox"></th>
@@ -89,7 +90,7 @@
                 <th>联系人</th>
                 <th>联系方式</th>
                 <th>邮箱</th>
-                <!-- <th>查看</th>-->
+                &lt;!&ndash; <th>查看</th>&ndash;&gt;
                 <th>修改</th>
                 <th>删除</th>
             </tr>
@@ -100,10 +101,10 @@
         </table>
     </div>
     <fieldset class="layui-elem-field layui-field-title" style="margin-top: 30px;">
-        <!--  <legend>自定义主题 - 颜色随意定义</legend>-->
+        &lt;!&ndash;  <legend>自定义主题 - 颜色随意定义</legend>&ndash;&gt;
     </fieldset>
     <div id="demo2"></div>
-    <!-- 添加表单-->
+    &lt;!&ndash; 添加表单&ndash;&gt;
     <form class="" id="form_add" style="display: none" >
         <br>
         <table lay-even lay-skin="line" lay-size="lg">
@@ -168,7 +169,7 @@
             <button class="layui-btn layui-btn-normal" style="float: right;margin-right:100px">取消</button>
         </div>
     </form>
-    <!-- 修改表单-->
+    &lt;!&ndash; 修改表单&ndash;&gt;
     <form class="" id="edit_add" style="display: none" >
         <br>
         <table lay-even lay-skin="line" lay-size="lg">
@@ -235,4 +236,4 @@
     </form>
 </div>
 </body>
-</html>
+</html>-->
