--- a/src/main/resources/templates/systemmanagement/user_control.html
+++ b/src/main/resources/templates/systemmanagement/user_control.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <title>药品采购平台</title>
         <link rel="stylesheet" href="layui/css/layui.css">
-        <link rel="icon" href="images/bitbug_favicon.ico" type="image/x-icon"/>
+        <link rel="icon" href="/images/headlogo.ico" type="image/x-icon"/>
+
      <!--   <link rel="icon" href="images/favicon.ico" type="image/x-icon"/>-->
         <!--<script src="js/jquery-2.2.3.min.js"></script>-->
         <script src="layui/layui.js"></script>
@@ -88,6 +89,11 @@
             })
            });
         </script>
+        <style>
+           /* .layui-tab{
+                background-image: url("");
+            }*/
+        </style>
     </head>
 <body class="layui-layout-body">
 <div class="layui-layout layui-layout-admin">
@@ -139,8 +145,8 @@
                 <li class="layui-nav-item">
                     <a href="javascript:;">数据管理</a>
                     <dl class="layui-nav-child">
-                        <dd><a class="site-demo-active" data-id="6" data-url="/dictionaryManaged" id="dictionaryManaged" data-title="字典管理">字典管理</a></dd>
-                        <dd><a class="site-demo-active" data-id="7" data-url="/districtManagement" id="districtManagement" data-title="区域管理">区域管理</a></dd>
+                        <dd><a class="site-demo-active" data-id="6" data-url="/dictionaryManaged" id="dictionaryManaged" data-title="角色管理">角色管理</a></dd>
+                        <dd><a class="site-demo-active" data-id="7" data-url="/districtManagement" id="districtManagement" data-title="权限管理">权限管理</a></dd>
                         <dd><a class="site-demo-active" data-id="8" data-url="/userManagement" id="userManagement" data-title="用户管理">用户管理</a></dd>
                         <dd><a class="site-demo-active" data-id="9" data-url="/userRightsManagement" id="userRightsManagement" data-title="用户权限管理">用户权限管理</a></dd>
                         <dd><a class="site-demo-active" data-id="10" data-url="/systemParameter" id="systemParameter" data-title="系统参数配置">系统参数配置</a></dd>
